# PilotDesk

./: .gitignore  LICENSE  README.md  _check_tsc.bat  _check_vite.bat  _commit_msg.txt  _find.py  _run_tsc.bat  _start_dev.bat  _test_result.txt  _test_tauri.cjs  _test_tauri.js  agents-config.json  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  market.rs  sidecar_manager.rs
src-tauri/src/agent/: conpty.rs  conpty.rs.backup  handler.rs  mod.rs
src-tauri/src/agent_config/: claude.rs  hermes.rs  mod.rs
src-tauri/src/commands/: agents.rs  api_provider.rs  app_settings.rs  bot.rs  config.rs  env.rs  inspiration.rs  install_log.rs  mod.rs  session.rs  theme.rs  update.rs  workflow.rs
src-tauri/src/db/: init.rs  models.rs
src-tauri/src/plugin/: agent.rs  mod.rs  plugin_fs.rs  shell.rs  store.rs
src-tauri/src/sidecar/: manager.rs
src-tauri/src/utils/: crypto.rs  errors.rs  mod.rs  paths.rs
src-tauri/src/workflow/: engine.rs  executor.rs  mod.rs  registry.rs  scheduler.rs  template.rs
src-tauri/src/workflow/agents/: agent_executor.rs  api_executor.rs  approval_executor.rs  condition_executor.rs
src-tauri/src/workflow/executors/: agent_executor.rs  aggregator_executor.rs  api_executor.rs  human_input_executor.rs  interact_executor.rs  mod.rs  plugin_executor.rs  transform_executor.rs
src-tauri/target-check/: .rustc_info.json
src-tauri/target-check/debug/.fingerprint/adler2-708dea00d6a216f0/: lib-adler2.json
src-tauri/target-check/debug/.fingerprint/aead-1309b44b44d38990/: lib-aead  lib-aead.json
src-tauri/target-check/debug/.fingerprint/aes-gcm-2fafd9885e0765f1/: lib-aes_gcm
src-tauri/target-check/debug/.fingerprint/ahash-cb9fc8ad29a641b8/: lib-ahash  lib-ahash.json
(+1403 files in other folders)
