[package]
license = "MIT"
name = "pilotdesk"
version = "0.1.0"
description = "PilotDesk - Unified Desktop Client for Claude Code & Hermes Agent"
authors = [""]
edition = "2021"

[lib]
name = "pilotdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "native-tls"] }
tauri-plugin-dialog = "2.7.1"
aes-gcm = "0.10"
base64 = "0.22"
semver = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
